routes, load order fixed and other. Boilerplate is almost usable, tommorow I will tweak the build even more and then the project will be ready

--- a/public/less/bootstrap.less
+++ b/public/less/bootstrap.less
@@ -58,6 +58,8 @@
 @import "utilities.less";
 @import "responsive-utilities.less";
 
-body>.container{
+ng-view{
+  display: block;
+  overflow: visible;
   margin-top: 50px;
 }
