--- a/public/templates/root.html
+++ b/public/templates/root.html
@@ -1,1 +1,9 @@
-<div>root</div>
+<div class="starter-template container" ng-controller="rootCtrl">
+    <h1>Bootstrap starter template</h1>
+    <p class="lead">Use this document as a way to quickly start any new project.<br>
+        This is the only precreated controller, creation of others awaits for you.
+    </p>
+    <h3>You can test if angular bootstrapped all right down here in the bound input:</h3>
+    <input type="text" ng-model="bindingTest">
+    <span ng-bind="bindingTest"></span>
+</div>
