--- a/public/less/bootstrap.less
+++ b/public/less/bootstrap.less
@@ -58,6 +58,8 @@
 @import "utilities.less";
 @import "responsive-utilities.less";
 
+@import "./directives/directives";
+
 ng-view{
   display: block;
   overflow: visible;
