bootstrap update to 3.0.3 angular to 1.2.6

--- a/public/less/bootstrap.less
+++ b/public/less/bootstrap.less
@@ -51,6 +51,7 @@
 @import "./directives/directives";
 
 ng-view{
+  //just quick style for the example layout, feel free to modify to your needs
   display: block;
   overflow: visible;
   margin-top: 50px;
