bootstrap and bower deps update

--- a/public/templates/root.html
+++ b/public/templates/root.html
@@ -1,4 +1,4 @@
-<div class="starter-template container" ng-controller="rootCtrl">
+<div class="container" ng-controller="rootCtrl">
     <h1>Bootstrap starter template</h1>
     <p class="lead">Use this document as a way to quickly start any new project.<br>
         This is the only precreated controller, creation of others awaits for you.
