--- a/public/less/theme.less
+++ b/public/less/theme.less
@@ -3,7 +3,7 @@
 // Load core variables and mixins
 // --------------------------------------------------
 
-@import "variables.less";
+@import "variables";
 @import "mixins.less";
 
 
@@ -63,9 +63,9 @@
 .btn-default { .btn-styles(@btn-default-bg); text-shadow: 0 1px 0 #fff; border-color: #ccc; }
 .btn-primary { .btn-styles(@btn-primary-bg); }
 .btn-success { .btn-styles(@btn-success-bg); }
+.btn-info    { .btn-styles(@btn-info-bg); }
 .btn-warning { .btn-styles(@btn-warning-bg); }
 .btn-danger  { .btn-styles(@btn-danger-bg); }
-.btn-info    { .btn-styles(@btn-info-bg); }
 
 
 
